# personal-investment-assistant

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  SPEC.md  main.py  pyproject.toml  watchlist.yaml
data/: advisor_scan_universe.yaml
deploy/: install-pia-bot-linux.sh  install-pia-bot-macos.sh
deploy/k8s/: README.md
deploy/launchd/: com.personalinvestmentassistant.bot.plist  com.personalinvestmentassistant.end-of-day.plist  com.personalinvestmentassistant.midday.plist  com.personalinvestmentassistant.pre-market.plist
deploy/otel/: README.md  compose.podman.yml
deploy/systemd/: pia-bot.service  pia-end-of-day.timer  pia-midday.timer  pia-pre-market.timer  pia-run@.service
docker/: Dockerfile  README.md  compose.docker.yml  compose.gpu.yml  compose.podman.yml  compose.schedule.yml  compose.stub.yml  compose.yml  ofelia.ini  up.sh
docker/llm-stub/: Dockerfile  app.py
docs/: README.md  agent_architecture.md  compose.md  kubernetes.md  openshift.md
docs/plans/: allocation_advisor.md  get_performance_tool.md  get_risk_tool.md
src/: advisor_history.py  advisor_on_demand.py  advisor_scan.py  advisor_tool_loop.py  cli.py  config.py  console.py  graph.py  investor_preferences.py  llm.py  logging_config.py  main.py  monitor_scheduler.py  proactive_brief.py  run_advisor.py  run_graph.py  run_market_spike.py  run_once.py  state.py  state_persistence.py  telemetry.py  watchlist_overlay.py
src/bot/: telegram_handlers.py
src/nodes/: advisor.py  analyst.py  discovery.py  market_data.py  news_analyst.py  notifier.py  supervisor.py
src/skills/: __init__.py
src/tools/: allocation_tool.py  email_client.py  fundamentals_tool.py  indicators.py  market_calendar.py  news_fetcher.py  performance_tool.py  quote_tool.py  risk_metrics.py  risk_tool.py  telegram_client.py  telegram_format.py  ticker_extract.py  yfinance_tool.py
src/web/: __init__.py  advisor_service.py  app.py  auth.py  format.py  history_view.py  (+1 more)
tests/: test_advisor_scope.py  test_advisor_tools.py  test_allocation_advisor.py  test_notifier_format.py  test_persist_skipped.py  test_risk_metrics.py  test_telegram_format.py  test_watchlist_overlay.py
watchlists/: etc.yaml  etf.yaml  stock.yaml
(+30 files in other folders)
