[project]
name = "personal-investment-assistant"
version = "0.1.0"
description = "Autonomous advisory agent for stock and ETF watchlists"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.4.0",
    "pandas-ta>=0.4.71b0",
    "pydantic-settings>=2.14.1",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "yfinance>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
pia-spike = "src.run_market_spike:main"
pia-graph = "src.run_graph:main"
pia-run = "src.run_once:main"
pia-console = "src.console:main"
pia-advisor = "src.run_advisor:main"
pia-bot = "src.main:main"
