[project]
name = "personal-investment-assistant"
version = "0.1.0"
description = "Autonomous advisory agent for stock and ETF watchlists"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "markdown>=3.10.2",
    "nh3>=0.3.5",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.4.0",
    "pandas-ta>=0.4.71b0",
    "pydantic-settings>=2.14.1",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.49.0",
    "yfinance>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/web/templates" = "src/web/templates"
"src/web/static" = "src/web/static"

[project.scripts]
pia-spike = "src.run_market_spike:main"
pia-graph = "src.run_graph:main"
pia-run = "src.run_once:main"
pia-console = "src.console:main"
pia-advisor = "src.run_advisor:main"
pia-bot = "src.main:main"
pia-web = "src.web.app:main"
